💄 prevent input error messages from shifting content

--- a/src/styles/FormComponents.styles.scss
+++ b/src/styles/FormComponents.styles.scss
@@ -57,5 +57,8 @@
   color: red;
   font-size: 14px;
   margin: 2px;
+}
 
+.error-container{
+  min-height: 26px;
 }
